# CS2D-Overlay

./: .gitignore  Overlay Launcher.au3  README.md
CS2D_OVERLAY/: CMakeLists.txt  CMakeSettings.json  CS2D.CT  CS2D.rcnet  CS2DOverlay.aps  README.md  WFDXHook.sln  WFDXHook.vcxproj  WFDXHook.vcxproj.filters  main.cpp  main.h  patch_isdebuggerpresent.1337  reclass.rcnet
CS2D_OVERLAY/CS2D_OVERLAY/: CMakeLists.txt  dllmain.cpp
CS2D_OVERLAY/CS2D_OVERLAY/MinHook/src/: hook.c
CS2D_OVERLAY/CS2D_OVERLAY/headers/: config.h  context.h  d3d9hook.h  dllmain.h  features.h  fonts.h  globals.h  logger.h  manager.h  misc.h  overlay.h  patscanner.h  sdk.h  sprites.h
CS2D_OVERLAY/CS2D_OVERLAY/headers/SDKGen/: Application.h  Array.h  BITMAPINFOHEADER.h  CHARFORMAT.h  CHARFORMATW.h  CHARRANGE.h  CHOOSECOLOR.h  CHOOSEFONT.h  COLORSCHEME.h  COMBOBOXEXITEMW.h  Calculator.h  CollisionCategories.h  CollisionEvent.h  CollisionHit.h  Competitive.h  D3DADAPTER_IDENTIFIER9.h  D3DCAPS9.h  D3DCLIPSTATUS.h  D3DCLIPSTATUS9.h  D3DDEVTYPE.h  D3DDISPLAYMODE.h  D3DLIGHT9.h  D3DLOCKED_RECT.h  D3DMATERIAL7.h  D3DMATERIAL9.h  D3DMATRIX.h  D3DPRESENT_PARAMETERS.h  D3DRASTER_STATUS.h  D3DRECTPATCH_INFO.h  D3DSURFACE_DESC.h  D3DTRIPATCH_INFO.h  D3DVERTEXBUFFERDESC.h  D3DVERTEXELEMENT9.h  D3DVIEWPORT7.h  D3DVIEWPORT9.h  DDARGB.h  DDBLTFX.h  DDCAPS_DX1.h  DDCAPS_DX3.h  DDCAPS_DX5.h  (+482 more)
CS2D_OVERLAY/CS2D_OVERLAY/source/: config.cpp  d3d9hook.cpp  features.cpp  misc.cpp  overlay.cpp
CS2D_OVERLAY/Release/: CS2DOverlay.iobj  CS2DOverlay.ipdb  CS2DOverlay.txt
CS2D_OVERLAY/Release/CS2DOverlay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS2DOverlay.lastbuildstate  CS2DOverlay.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
CS2D_OVERLAY/SDKGen/: StatsMap.h  TImage.h  TLink.h  TList.h  TMap.h  TNode.h  Titem.h  Tpl.h  Tstats_user.h  cInt.h
CS2D_OVERLAY_2020/: .gitignore  CMakeSettings.json  reclass.rcnet
CS2D_OVERLAY_2020/CS2D_OVERLAY/: CMakeLists.txt  dllmain.cpp
CS2D_OVERLAY_2020/CS2D_OVERLAY/headers/: AOBs.h  d3d9hook.h  dllmain.h  features.h  sdk.h
CS2D_OVERLAY_2020/CS2D_OVERLAY/source/: d3d9hook.cpp  logger.cpp
dev stuff/: class_info_printer.lua  decl.idc.txt  finder.lua
